tests/baselines/reference/exportNestedNamespaces2.errors.txt
first.js(2,9): error TS2339: Property 'formatters' does not exist on type 'typeof import("first")'.
second.js(2,9): error TS2339: Property 'formatters' does not exist on type 'typeof import("second")'.


==== mod.js (0 errors) ====
    // Based on a pattern from adonis
    exports.formatters = {}
==== first.js (1 errors) ====
    exports = require('./mod')
    exports.formatters.j = function (v) {
            ~~~~~~~~~~
!!! error TS2339: Property 'formatters' does not exist on type 'typeof import("first")'.
        return v
    }
==== second.js (1 errors) ====
    exports = require('./mod')
    exports.formatters.o = function (v) {
            ~~~~~~~~~~
!!! error TS2339: Property 'formatters' does not exist on type 'typeof import("second")'.
        return v
    }
    
==== use.js (0 errors) ====
    import * as debug from './mod'
    
    debug.formatters.j
    var one = debug.formatters.o(1)
    